Fix feature project layout, borders, and image treatment
- Remove double border between feature sections (featureContent border-bottom only)
- Add CPAS and CV project cards with hover color treatments
- CPAS: text row 1, equal-height side-by-side images in row 2
- CV: img2 top-right foreground, img1 bottom-left background (staggered overlap)
- Update left sidebar with current Meta role, Before, Education sections
- Change site background to #F6F6F2 including nav and sticky headers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ p {
 }
 
 figcaption {
-    font-size: 0.7em;
+    font-size: 0.8em;
     line-height: 1.6em;
     padding: 1.5em 0 2em 0;
     color: rgba(0, 0, 0, 0.8);
@@ -140,7 +140,7 @@ a:hover {
   padding: 1em 2em 1em 2em;
   width: 100vw;
   z-index: 10;
-  background: #FFF;
+  background: #F6F6F2;
   display: grid;
   align-items: center;
   column-gap: 1em;
@@ -225,6 +225,7 @@ a:hover {
 /*INLINE CONTENT */
 .inlineImg, .inlineImg2 {
     padding: 0 0.25em 0 0.25em;
+    border-radius: 4px;
 }
 
 .inlineImg img, .inlineImg2 img {
@@ -264,7 +265,7 @@ a:hover {
     position: sticky;
     top: 3.75em;
     z-index: 2;
-    background: #FFF;
+    background: #F6F6F2;
     border-bottom: 1px black solid;
 }
 
@@ -278,6 +279,7 @@ a:hover {
   box-sizing: border-box;
   /* height: 90vh; */
   position: relative;
+  border-bottom: 1px black solid;
 }
 
 .featureText {
@@ -298,22 +300,26 @@ a:hover {
     padding: 0 0 0.5em 0;
     z-index: 1;
     margin-bottom: -8em;
+    border-radius: 4px;
 }
 
 .featureImg2 {
     grid-column: 1 / 6;
     grid-row: 2;
+     border-radius: 4px;
 }
 
 .featureImg3 {
   grid-column: 3 / 9;
   grid-row: 2;
+   border-radius: 4px;
 }
 
 .aboutImg {
   grid-column: 1 / 5;
   grid-row: 1;
   padding: 7em 0 1.5em 0;
+   border-radius: 4px;
 }
 
 .aboutHeading {
@@ -332,21 +338,22 @@ a:hover {
 }
 
 .over, .over2, .over3 {
-  transform: scale(1);
+
   transition: transform 0.25s;
 }
 
-.over.zoom, .over2.zoom, .over3.zoom {
+/* .over.zoom, .over2.zoom, .over3.zoom {
   transform: scale(1.15);
   transition: transform 0.25s;
   overflow: hidden;
-}
+} */
 
 .leftImg img, .featureImg1 img, .featureImg2 img, .featureImg3 img, .deliverablesImg1 img,
 .deliverablesImg2 img, .deliverablesImg3 img, .deliverablesImg4 img, .gridItem img,
 .carousel-cell img, .imgFull img, .aboutImg img {
     width: 100%;
-    object-fit: contain;
+    object-fit: contain; 
+    border-radius: 4px;
 }
 
 /* CASE STUDIES STYLING*/
@@ -381,6 +388,7 @@ a:hover {
 
 .projectFeatureImg {
     width: 100%;
+     border-radius: 4px;
 }
 
 .projectFeatureImg img, .projectCoverImg img {
@@ -444,6 +452,60 @@ iframe {
 .imgFull {
   grid-column: 1 / 9;
   padding-bottom: 1.5em;
+}
+
+/* CPAS - text in row 1, images side by side in row 2, equal height */
+#cpas .featureImg1 {
+    grid-column: 1 / 5;
+    grid-row: 2;
+    margin-bottom: 0;
+    padding: 0 0.75em 0.5em 0;
+}
+
+#cpas .featureImg2 {
+    grid-column: 5 / 9;
+    grid-row: 2;
+    padding-bottom: 0.5em;
+}
+
+#cpas .featureImg1 img,
+#cpas .featureImg2 img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+
+/* CV - img2 top-right foreground, img1 bottom-left background */
+#cv .featureContent {
+    padding-top: 1.5em;
+}
+
+#cv .featureImg1 {
+    grid-column: 1 / 6;
+    grid-row: 2;
+    margin-top:-18em;
+    margin-bottom: 0em;
+    position: relative;
+    z-index: 0;
+}
+
+#cv .featureImg2 {
+    grid-column: 5 / 9;
+    grid-row: 1;
+    margin-top: 0;
+    position: relative;
+    z-index: 2;
+}
+
+/* AIGA - reduce top padding and pull second image up toward text */
+#aiga .featureContent {
+    padding-top: 1.5em;
+}
+
+#aiga .featureImg2 {
+    margin-top: -14em;
 }
 
 /* FLICKITY CAROUSEL*/
